# hpsspy

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
data/: hpss_map.json  hpss_map_dr10.json  hpss_map_dr8.json  hpss_map_dr9.json
doc/: Makefile  api.rst  changes.rst  conf.py  configuration.rst  index.rst  using.rst
hpsspy/: __init__.py  _version.py  conftest.py  scan.py  util.py  validate.py
hpsspy/data/: __init__.py  desi.json  sdss.json
hpsspy/data/tests/: test_data.py
hpsspy/os/: __init__.py  _os.py  chmod.py  listdir.py  makedirs.py  mkdir.py  path.py  stat.py  walk.py
hpsspy/os/path/: __init__.py  isdir.py  isfile.py  islink.py
hpsspy/scan/: __init__.py  compile_map.py  files_to_hpss.py  find_missing.py  main.py  process_missing.py  scan_disk.py  scan_hpss.py
hpsspy/sphinx/: __init__.py
hpsspy/test/: __init__.py  hpsspy_test_suite.py  test_data.py  test_os.py  test_scan.py  test_top_level.py  test_util.py  test_validate.py
hpsspy/test/t/: hpss_cache.csv  hsi  invalid_file  missing_cache.json  test_scan.json  test_scan_disk_cache.csv  test_scan_disk_cache_missing.csv  test_scan_disk_cache_multiple.csv
hpsspy/tests/: test_hpsspy.py
hpsspy/util/: __init__.py  get_hpss_dir.py  get_tmpdir.py  hpss_file.py  hsi.py  htar.py
hpsspy/util/tests/: test_util.py
scripts/: hpsspy
