[metadata]
name = hpsspy
author = Benjamin Alan Weaver
author_email = benjamin.weaver@noirlab.edu
license = BSD 3-Clause License
license_file = LICENSE.rst
url = http://github.com/weaverba137/hpsspy
description = Package for interacting with HPSS.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = weaverba137/pydl
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Archiving

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    pytz

[options.entry_points]
console_scripts =
    missing_from_hpss = hpsspy.scan:main

[options.extras_require]
test =
    pytest
docs =
    Sphinx

[options.package_data]
hpsspy = data/*
hpsspy.test = t/*

[coverage:run]
relative_files = True
omit =
    hpsspy/_version.py
    hpsspy/test/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):

[pycodestyle]
# See https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
# for details of these configuration options.
#
# These are normally ignored by default:
# ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504
#
# In addition to the default set we add:
# - E501: line too long (82 > 79 characters)
# - E731: do not assign a lambda expression, use a def
# - E741: do not use variables named 'l', 'O', or 'I' -- because, for example,
#   'l' might refer to Galactic longitude.
ignore = E121, E123, E126, E133, E226, E241, E242, E501, E704, E731, E741, W503, W504
